fix: disable scrollbar from changing by clicking

--- a/src/pages/TextToSpeech.css
+++ b/src/pages/TextToSpeech.css
@@ -132,7 +132,8 @@
 }
 
 .range-bar-slider {
-    -webkit-appearance: none; /* Remove default styling */
+    -webkit-appearance: none;
+    /* Remove default styling */
     appearance: none;
     width: 100%;
     height: 10px;
@@ -159,4 +160,12 @@
     .text-to-speech-voice-section .dropdown {
         width: 100%;
     }
+}
+
+input[type=range] {
+    pointer-events: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    pointer-events: auto;
 }
